testsuite/tests/typecheck/should_fail/T15883e.stderr

T15883e.hs:16:1: error:
    • Can't make a derived instance of
        ‘Data (Foo ('BoxedRep 'Lifted))’ with the stock strategy:
        Don't know how to derive ‘Data’
          for type ‘forall (a :: TYPE rep). a’
    • In the stand-alone deriving instance for
        ‘Data (Foo (BoxedRep Lifted))’
